--- a/styles/general/header.css
+++ b/styles/general/header.css
@@ -10,7 +10,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 20;
 }
 
 header>button {
